--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,6 +1,6 @@
 {
-  "home": "خانه",
-  "about": "درباره ما",
-  "contact": "تماس با ما",
-  "welcome": "به استادی‌پی خوش آمدید"
+  "home": {
+    "title": "به استادی‌پی خوش آمدید 🎓",
+    "subtitle": "یک پلتفرم آموزشی برای ساده‌سازی تجربه یادگیری شما"
+  }
 }
