--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,6 +1,4 @@
 {
-  "home": {
-    "title": "به استادی‌پی خوش آمدید 🎓",
-    "subtitle": "یک پلتفرم آموزشی برای ساده‌سازی تجربه یادگیری شما"
-  }
+  "homeTitle": "به استادی‌پی خوش آمدید 🎓",
+  "homeDescription": "یک پلتفرم آموزشی برای ساده‌تر کردن تجربه یادگیری شما."
 }
